# LogSleuth

./: .gitignore  ATLAS.md  Cargo.toml  LogSleuth-Specification.md  PROGRESS.md  README.md  build.rs  config.example.toml  test.rs  update-application.ps1  update-application.sh
.github/: installer.nsi
.github/workflows/: ci.yml  release.yml
assets/: app.manifest
examples/: gen_icons.rs  test_regex.rs
installer/linux/: create-appimage.sh
installer/macos/: create-dmg.sh
installer/windows/: logsleuth.nsi
profiles/: apache_combined.toml  exchange_tracking.toml  generic_timestamp.toml  iis_w3c.toml  intune_ime.toml  json_lines.toml  kubernetes_klog.toml  log4j_default.toml  nginx_error.toml  plain_text.toml  postgresql_log.toml  sccm_cmtrace.toml  sql_server_agent.toml  sql_server_error.toml  syslog_rfc3164.toml  syslog_rfc5424.toml  tomcat_catalina.toml  veeam_vbo365.toml  veeam_vbr.toml  windows_cluster.toml  windows_dhcp.toml  windows_firewall.toml
scripts/: New-LogSleuthProfile.ps1
src/: gui.rs  lib.rs  main.rs
src/app/: dir_watcher.rs  mod.rs  profile_mgr.rs  scan.rs  session.rs  state.rs  tail.rs  windows_event_logs.rs
src/core/: discovery.rs  evtx_parser.rs  export.rs  filter.rs  mod.rs  model.rs  multi_search.rs  parser.rs  profile.rs
src/platform/: config.rs  fs.rs  mod.rs  unc_auth.rs
src/ui/: mod.rs  theme.rs
src/ui/panels/: about.rs  detail.rs  discovery.rs  filters.rs  log_summary.rs  mod.rs  options.rs  summary.rs  timeline.rs
src/util/: constants.rs  error.rs  logging.rs  mod.rs
tests/: e2e_discovery.rs
